client/src/index.css
.commentform {
  min-height: 200px;
  font-family: inherit, serif!important;
}

.imageform{
  min-height: 300px;
  font-family: inherit!important;
  font-size: inherit!important
}

.btn-outline-danger:hover{
  background-color:#e8233b;
}
.btn-outline-danger{
  color: #e8233b;
}

.btn-danger:hover{
  background-color: #e8233b;
}

.btn-danger{
  background-color: #e8233b;
}

.hero {
  margin-top: 2vw;
  padding: 1vw;
}

.hero .sortbutton button{
  text-align: right;
  border-top: none;
  border-left: none;
  border-right: none;
  border-radius: 0;
  cursor: pointer;
  padding: 10px 50px;
  margin-bottom: 2vw;
}

.hero .sortbutton .newest{
  text-align: left;
}

.hero .image-description{
  background: rgba(0,0,0,0.7);
  color: white;
  border-radius: 0 0 5px 5px;
  margin-top:-110px;
  padding: 25px;
  opacity: 0;
  transition: opacity 0.3s linear;
}

.hero .imageslist:hover .image-description{
  opacity: 1;
}

.hero .imageslist{
  padding: 10px .5rem;
}

.hero .imageslist img{
  border-radius: 5px;
  height: 100%;
  width: 100%;
}

.homepage{
  height: 100vh;
  background: #e8233b;
  overflow: hidden;
}

.marked{
  border-color: #e8233b;
  color: #e8233b;
}

.marked:hover {
  background-color: #e8233b;
  border-color: #e8233b;
}

.homepage .main-section {
  padding: 10vw 10px;
}
.homepage .main-section .row{
  margin-top: 2rem;
}

.homepage .main-section .site-description{
  border-left: solid 0.5px;
  color: white;
  border-color: black;
}

.homepage .main-section .site-description h6{
  font-weight: 500; 
}

.homepage .main-section h1{
  text-align: center
}
.homepage .main-section .welcome{
  text-align: right;
  border-right: solid 0.5px;
}

.homepage .dummy{
  height:15vh;
}

.homepage .welcome span {
  font-weight: lighter;
}

.homepage .main-section .auth{
  margin-top: 30px!important;
  margin-left: 7px
}

.homepage .main-section .auth .btn{
  padding: 15px 40px;
  font-weight: 500;
  font-size: 20px
}


.newcommentform{
    margin: 20px;
    
}

.newcommentform button{
    border-radius: 0 0 5px 0;
    margin: 0;
}

.newcommentform label{
  margin: 5px;
  padding-bottom: 5px;
  border-bottom: solid .5px #e5e5e5;
  width: 99%  
}

.newcommentform textarea{
  border: none;
  width: 99.8%;
  margin-left: 1px
}

.allcomments .comment{ 
  min-height: 80px;
  padding: 5px;
  margin: 40px 10px;
  border-bottom: solid 0.5px #e5e5e5
  
}

.allcomments .comment button{
  margin-left: 5px;
  color: white;
  background: #343a40;
  padding: 0 10px 3px;
  border: none;
  cursor: pointer;
  border-radius: 100%
           
}

.allcomments .comment .author {
  font-weight: bold;
  margin: 0;
}

.allcomments .comment .date {
  font-size: 14px;
}

.authform {
  border: solid 0.5px #e5e5e5;
  padding: 20px 20px 80px 20px;
  border-radius: 5px;
  margin-top: 4vh;
}

.authform button{
  width: 40%;
  float: right;
}

.authform input{
  margin-bottom: 20px
}

.imagepage {
  margin: 20px 0;
}

.imagepage .card{
  margin-bottom: 40px;
}

.imagepage .description{
  overflow: hidden;
  min-height: 100px
}

.authaction {
  border-top: solid 0.5px #e5e5e5;
}

.authaction .btn{
  border-radius: 0;
  border: none;
}

.btn {
  border-radius: 5px
}

.loading{
  margin-top: 10vh;
  display: flex;
  justify-content: center
  
}

